# service-api-testing

./: .gitattributes  .gitignore  README.md  docker-compose.yml
projects/crypto_api_project/: Cargo.toml
projects/crypto_api_project/src/: api_library.rs  client.rs  encryption.rs  error.rs  funguo.rs  keys.rs  main.rs  two_factor_auth.rs
projects/crypto_api_project/src/api_library/: get_asset_pair_info.rs  get_open_orders.rs  get_server_time.rs
projects/crypto_api_project/tests/: api_tests.rs  dummy_data.rs
projects/crypto_api_project/tests/features/: api_tests.feature  private_api_tests.feature  public_api_tests.feature
